tests/invalid/default_attribute_invalid_access.wio
@Default(i32)
object InvalidDefaultAccess {
    value: i32 = 0;
}

fn Entry(args: string[]) -> i32 {
    return 0;
}
